--- a/portofolio/style.css
+++ b/portofolio/style.css
@@ -1,3 +1,48 @@
+section{
+    padding-top: 128px;
+}
+
+.btn{
+    border: 3px solid black;
+    border-radius: 24px;
+}
+
+.btn:hover{
+    border: 3px solid black;
+    background-color: black;
+    color: white;
+}
+
 .navbar{
     box-shadow: 0 0 0 3px #3f3f3f;
+}
+
+.home h1{
+    font-size: 72px;
+}
+
+.home h3{
+    font-size: 48px;
+}
+
+.home .arrow img{
+width: 50px;
+}
+
+#arrow{
+    animation: 2s upDown infinite;
+}
+
+@keyframes upDown{
+    0%{
+        transform: translateY(0);
+    }
+
+    50%{
+        transform: translateY(10px);
+    }
+
+    100%{
+        transform: translateY(0);
+    }
 }
