--- a/portofolio/style.css
+++ b/portofolio/style.css
@@ -1,5 +1,18 @@
 section{
     padding-top: 128px;
+    position: relative;
+}
+
+section::before{
+    z-index: -1;
+    content: '';
+    font-size: 72px;
+    color: gray;
+    opacity: 0.25;
+    position: absolute;
+    font-weight: 700;
+    top: 15px;
+    left: -80px;
 }
 
 .btn{
@@ -31,6 +44,21 @@ width: 50px;
 
 #arrow{
     animation: 2s upDown infinite;
+}
+
+.about::before{
+    content: 'About';
+}
+
+.about-exp-item{
+    margin-top: 32px;
+}
+
+.about-exp-item-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
 }
 
 @keyframes upDown{
