--- a/portofolio/style.css
+++ b/portofolio/style.css
@@ -20,7 +20,7 @@ section::before{
     border-radius: 24px;
 }
 
-.btn:hover{
+.btn.button:hover, .btn.button.active{
     border: 3px solid black;
     background-color: black;
     color: white;
@@ -59,6 +59,10 @@ width: 50px;
     align-items: center;
     justify-content: space-between;
     margin-top: 20px;
+}
+
+.about-exp-item-detail{
+    display: none;
 }
 
 @keyframes upDown{
