--- a/portofolio/style.css
+++ b/portofolio/style.css
@@ -12,7 +12,7 @@ section::before{
     position: absolute;
     font-weight: 700;
     top: 15px;
-    left: -80px;
+    left: -30px;
 }
 
 .btn{
@@ -36,6 +36,10 @@ section::before{
 
 .home h3{
     font-size: 48px;
+}
+
+.home img{
+    width: 100%;
 }
 
 .home .arrow img{
@@ -139,6 +143,19 @@ width: 50px;
 
 .form-label{
     font-weight: 600;
+}
+
+@media only screen and (max-width: 768px){
+    .home img{
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 576px){
+    section::before{
+        left: -10px;
+        font-size: 64px;
+    }
 }
 
 @keyframes upDown{
